<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dagla</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="n3w">new</string>
    <string name="sale">sale</string>
    <string name="items">Items</string>
    <string name="item_details">Item Details</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="direction">Direction</string>
    <string name="newest">Newest</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="related_items">Related Items</string>
    <string name="sold_out">Sold out</string>
    <string name="view_cart">View cart</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="no_products_found">No products found</string>
    <string name="your_shopping_bag">Your shopping bag</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="delivery_address">Delivery address</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password_">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">or</string>
    <string name="add_new_address">Add new address</string>
    <string name="edit_address">Edit address</string>
    <string name="zero_address">0 Address</string>
    <string name="zero_orders">0 Orders</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>
    <string name="search_here_">Search here ...</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="express_checkout">Express checkout</string>
    <string name="register_now">Register now</string>
    <string name="your_login_was_successful">Your login was successful</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="my_addresses">My Addresses</string>
    <string name="payment">Payment</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="your_address_book_is_empty">Your address book is empty</string>
    <string name="your_orders_history_is_empty">Your orders history is empty</string>
    <string name="terms_n_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="address_name">Address name</string>
    <string name="address_name_">Address name *</string>
    <string name="area">Area</string>
    <string name="area_">Area *</string>
    <string name="block">Block</string>
    <string name="block_">Block *</string>
    <string name="street">Street</string>
    <string name="street_">Street *</string>
    <string name="avenue">Avenue (Jaddah)</string>
    <string name="house_building">House/Building</string>
    <string name="house_building_">House/Building *</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="extra_details">Extra details</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delivery_date_">Delivery date:</string>
    <string name="order_summary">Order summary</string>
    <string name="coupon_code">Coupon code</string>
    <string name="redeem">Redeem</string>
    <string name="remove">Remove</string>
    <string name="payment_summary">Payment summary</string>
    <string name="payment_method">Payment method</string>
    <string name="submit_order">Submit order</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="pay">Pay</string>
    <string name="shop_by">Shop by</string>
    <string name="my_account">My Account</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="message">Message</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="invalid_coupon_code">Invalid coupon code</string>
    <string name="coupon_redeemed_successfully">Coupon redeemed successfully</string>
    <string name="enter_coupon_code_here">Enter coupon code here</string>
    <string name="req_email_address">Please enter email address</string>
    <string name="req_password">Please enter password</string>
    <string name="req_name">Please enter name</string>
    <string name="req_mobile_number">Please enter mobile number</string>
    <string name="req_address">Please enter address name</string>
    <string name="req_area">Please select area</string>
    <string name="req_block">Please enter block</string>
    <string name="req_street">Please enter street</string>
    <string name="req_house_building">Please enter house/building</string>
    <string name="req_current_password">Please enter current password</string>
    <string name="req_new_password">Please enter new password</string>
    <string name="req_confirm_password">Please confirm new password</string>
    <string name="req_new_password_6_chars">New Password must be 6 or more characters</string>
    <string name="req_password_6_chars">Password must be 6 or more characters</string>
    <string name="req_new_password_do_not_match">New password and confirm password do not match</string>
    <string name="req_to">Please enter to</string>
    <string name="req_from">Please enter from</string>
    <string name="req_message">Please enter message</string>
    <string name="req_recipient_number">Please enter recipient number</string>
    <string name="req_coupon_code">Please enter coupon code</string>
    <string name="req_payment_method">Please select payment method</string>
    <string name="mobile_cannot_contain_spaces">Mobile number cannot contain spaces</string>
    <string name="email_cannot_contain_spaces">Email address cannot contain spaces</string>
    <string name="password_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="register_note">By registering you agree to Dagla\'s <u>Terms &amp; Conditions</u> and <u>Privacy Policy</u>.</string>
    <string name="msg_no_internet">Internet connection not found</string>
    <string name="msg_error">Sorry, an error has occurred</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="view_more">View More</string>
    <string name="title_home">Home</string>
    <string name="title_brands">A-Z</string>
    <string name="title_categories">Categories</string>
    <string name="title_my_account">My Account</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_cart">Cart</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="browse_as_guest">Browse as a guest</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="sign_sync">Sign in to sync your device and shop anytime, anywhere</string>
    <string name="my_account_details">My Account Details</string>
    <string name="login_register">Sign In / Register</string>
    <string name="help_information">Help and Information</string>
    <string name="help_advice_feedback">Help, Advice &amp; Feedback</string>
    <string name="available">Available 24 hours a day, 7 days a week.</string>
    <string name="email_us">Email Us</string>
    <string name="payment_security">Payment Security</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="returns_exchanges">Returns and Exchanges</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="faqs">FAQ\'s</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="change_language">Change Language</string>
    <string name="app_version">App Version</string>
    <string name="designed_by">Designed by Haya It Solutions</string>
    <string name="your_wishlist__is_empty">Your Wishlist is empty</string>
    <string name="essentials">Essentials</string>
    <string name="view_wishlist">View Wishlist</string>
    <string name="order_before_after">Note: Orders before 5PM will deliver same day, Orders after 5PM will deliver next day.</string>
    <string name="cart_ar" translatable="false">عربة التسوق</string>
    <string name="categories_ar" translatable="false">الأقسام</string>
    <string name="search_ar" translatable="false">بحث</string>
    <string name="ok_ar" translatable="false">تم</string>
    <string name="yes_ar" translatable="false">نعم</string>
    <string name="no_ar" translatable="false">لا</string>
    <string name="description_ar" translatable="false">وصف</string>
    <string name="size_ar" translatable="false">مقاس</string>
    <string name="add_to_cart_ar" translatable="false">أضف لعربة التسوق</string>
    <string name="related_items_ar" translatable="false">منتجات مشابهه</string>
    <string name="view_cart_ar" translatable="false">"عرض عربة التسوق "</string>
    <string name="continue_shopping_ar" translatable="false">واصل التسوق</string>
    <string name="your_shopping_bag_ar" translatable="false">"عربة التسوق "</string>
    <string name="total_ar" translatable="false" tools:ignore="ExtraTranslation">المجموع</string>
    <string name="checkout_ar" translatable="false">الدفع</string>
    <string name="login_ar" translatable="false">تسجيل الدخول</string>
    <string name="register_ar" translatable="false">تسجيل</string>
    <string name="your_cart_is_empty_ar" translatable="false">عربة التسوق فارغه</string>
    <string name="email_address_ar" translatable="false">البريد الإلكتروني</string>
    <string name="password_ar" translatable="false">كلمة السر</string>
    <string name="forgot_password_ar" translatable="false">نسيت كلمة السر</string>
    <string name="forgot_password__ar" translatable="false">نسيت كلمة السر؟</string>
    <string name="register_now_ar" translatable="false">سجل معنا</string>
    <string name="your_login_was_successful_ar" translatable="false">تسجيل دخول ناجح</string>
    <string name="submit_ar" translatable="false">تقديم</string>
    <string name="name_ar" translatable="false">الأسم</string>
    <string name="mobile_number_ar" translatable="false">رقم الموبايل</string>
    <string name="current_password_ar" translatable="false">الكلمه السريه الحاليه</string>
    <string name="new_password_ar" translatable="false">كلمه سريه جديده</string>
    <string name="confirm_password_ar" translatable="false">تأكيد الكلمه السريه</string>
    <string name="register_note_ar" translatable="false">بالتسجيل، أنت توافق على شروط و و أحكام دقلة و سياسة الخصوصية</string>
</resources>