<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAddressActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/txtAddressName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/address_name_"
                android:textStyle="normal"
                android:fontFamily="@font/avenir_next_medium"/>

            <EditText
                android:id="@+id/txtArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/area_"
                android:layout_marginTop="15dp"
                android:focusable="false"
                android:textStyle="normal"
                android:fontFamily="@font/avenir_next_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/txtBlock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/block_"
                    android:layout_weight="0.5"
                    android:textStyle="normal"
                    android:fontFamily="@font/avenir_next_medium"/>

                <EditText
                    android:id="@+id/txtStreet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/street_"
                    android:layout_weight="0.5"
                    android:textStyle="normal"
                    android:fontFamily="@font/avenir_next_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/txtAvenue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/avenue"
                    android:layout_weight="0.5"
                    android:textStyle="normal"
                    android:fontFamily="@font/avenir_next_medium"/>

                <EditText
                    android:id="@+id/txtHouseBuilding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/house_building_"
                    android:layout_weight="0.5"
                    android:textStyle="normal"
                    android:fontFamily="@font/avenir_next_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/txtFloor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/floor"
                    android:layout_weight="0.5"
                    android:textStyle="normal"
                    android:fontFamily="@font/avenir_next_medium"/>

                <EditText
                    android:id="@+id/txtApartment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/apartment"
                    android:layout_weight="0.5"
                    android:textStyle="normal"
                    android:fontFamily="@font/avenir_next_medium"/>

            </LinearLayout>

            <EditText
                android:id="@+id/txtExtraDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:hint="@string/extra_details"
                android:layout_marginTop="15dp"
                android:textStyle="normal"
                android:fontFamily="@font/avenir_next_medium"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/avenir_next_medium"
                android:textAllCaps="false"
                android:background="@drawable/bg_1"
                android:layout_marginTop="15dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>