<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/titleBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="14dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_back_ar"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/lblTitle"
            style="@style/TitleTextStyle2_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_ar"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/below_shadow"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBarLayout"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPersonName"
            android:hint="@string/name_ar"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:gravity="right"/>

        <EditText
            android:id="@+id/txtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:hint="@string/mobile_number_ar"
            android:layout_marginTop="25dp"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:gravity="right"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address_ar"
            android:layout_marginTop="25dp"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:gravity="right"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"
            android:hint="@string/password_ar"
            android:layout_marginTop="25dp"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:gravity="right"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_ar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/ge_dinar_one_medium"
            android:textAllCaps="false"
            android:background="@drawable/bg_1"
            android:layout_marginTop="25dp" />

        <Button
            style="@style/btnTerms"
            android:id="@+id/btnTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/register_note_ar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>