<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/txtCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:hint="@string/current_password_ar"
            android:gravity="right"/>

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:hint="@string/new_password_ar"
            android:gravity="right"/>

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textStyle="normal"
            android:fontFamily="@font/ge_dinar_one_light"
            android:hint="@string/confirm_password_ar"
            android:gravity="right"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/submit_ar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/ge_dinar_one_medium"
            android:textAllCaps="false"
            android:background="@drawable/bg_1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>