<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroductionActivity"
    android:background="@android:color/transparent"
    android:layout_marginTop="0dp">

    <ImageView
        android:id="@+id/signInImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/imgOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:layout_centerInParent="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">


        <TextView
            android:id="@+id/lblStartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_shopping"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/avenir_next_medium"/>

        <TextView
            android:id="@+id/lblDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/sign_sync"
            android:textColor="#222222"
            android:textSize="14sp"
            android:textStyle="normal"
            android:fontFamily="@font/avenir_next_medium"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_in_btn"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/avenir_next_medium"
            android:textAllCaps="false"
            android:background="@drawable/bg_1"/>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/register"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/avenir_next_medium"
            android:textAllCaps="false"
            android:background="@drawable/bg_2"/>

        <TextView
            android:id="@+id/lblGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/browse_as_guest"
            android:textColor="#222222"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/avenir_next_medium"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>